@@ -1,7 +1,5 @@
 /*
- *  Copyright (c) 2017, Peter Haag
- *  Copyright (c) 2014, Peter Haag
- *  Copyright (c) 2009, Peter Haag
+ *  Copyright (c) 2009-2019, Peter Haag
  *  Copyright (c) 2004-2008, SWITCH - Teleinformatikdienste fuer Lehre und Forschung
  *  All rights reserved.
  *  
@@ -349,7 +347,14 @@ int	v1_map_done = 0;
 		}
 
 		flow_record = nffile_r->buff_ptr;
+		uint32_t sumSize = 0;
 		for ( i=0; i < nffile_r->block_header->NumRecords; i++ ) {
+			if ( (sumSize + flow_record->size) > ret ) {
+				LogError("Corrupt data file. Inconsistent block size in %s line %d\n", __FILE__, __LINE__);
+				exit(255);
+			}
+			sumSize += flow_record->size;
+
 			switch ( flow_record->type ) { 
 				case CommonRecordType: {
 					uint32_t map_id = flow_record->ext_map;
