@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2009 - 2018, Peter Haag
+ *  Copyright (c) 2009 - 2019, Peter Haag
  *  Copyright (c) 2004 - 2008, SWITCH - Teleinformatikdienste fuer Lehre und Forschung
  *  All rights reserved.
  *  
@@ -230,7 +230,14 @@ int	v1_map_done = 0;
 		}
 
 		flow_record = nffile->buff_ptr;
+		uint32_t sumSize = 0;
 		for ( i=0; i < nffile->block_header->NumRecords; i++ ) {
+			if ( (sumSize + flow_record->size) > ret ) {
+				LogError("Corrupt data file. Inconsistent block size in %s line %d\n", __FILE__, __LINE__);
+				exit(255);
+			}
+			sumSize += flow_record->size;
+
 			switch ( flow_record->type ) { 
 					case CommonRecordType: {
 					generic_exporter_t *exp_info = exporter_list[flow_record->exporter_sysid];
@@ -291,11 +298,11 @@ int	v1_map_done = 0;
 	
 					} break; 
 				case ExporterInfoRecordType: {
-					int ret = AddExporterInfo((exporter_info_record_t *)flow_record);
-					if ( ret != 0 ) {
+					int err = AddExporterInfo((exporter_info_record_t *)flow_record);
+					if ( err != 0 ) {
 						int j;
 						for ( j=0; j < num_channels; j++ ) {
-							if ( channels[j].nffile != NULL && ret == 1) {
+							if ( channels[j].nffile != NULL && err == 1) {
 								// flush new exporter
 								AppendToBuffer(channels[j].nffile, (void *)flow_record, flow_record->size);
 							}
@@ -305,11 +312,11 @@ int	v1_map_done = 0;
 					}
 					} break;
 				case SamplerInfoRecordype: {
-					int ret = AddSamplerInfo((sampler_info_record_t *)flow_record);
-					if ( ret != 0 ) {
+					int err = AddSamplerInfo((sampler_info_record_t *)flow_record);
+					if ( err != 0 ) {
 						int j;
 						for ( j=0; j < num_channels; j++ ) {
-							if ( channels[j].nffile != NULL && ret == 1 ) {
+							if ( channels[j].nffile != NULL && err == 1 ) {
 								// flush new map
 								AppendToBuffer(channels[j].nffile, (void *)flow_record, flow_record->size);
 							}
